--- a/client/micasa-project/package.json
+++ b/client/micasa-project/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lineicons-react": "^2.0.0",
     "lucide-react": "^0.525.0",
     "node": "^24.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
